--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,11 @@
 <classpath>
   <classpathentry kind="src" path="src/main/scala"/>
   <classpathentry kind="con" path="org.scala-ide.sdt.launching.SCALA_CONTAINER"></classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/joda-time/joda-time/srcs/joda-time-2.9.9-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/joda-time/joda-time/jars/joda-time-2.9.9.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/joda-time/joda-time/docs/joda-time-2.9.9-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.spark/spark-core_2.11/srcs/spark-core_2.11-2.2.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-core_2.11/jars/spark-core_2.11-2.2.0.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.spark/spark-core_2.11/docs/spark-core_2.11-2.2.0-javadoc.jar!/"/>
@@ -107,6 +112,11 @@
   </classpathentry>
   <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/xmlenc/xmlenc/jars/xmlenc-0.52.jar"/>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/commons-httpclient/commons-httpclient/srcs/commons-httpclient-3.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/commons-httpclient/commons-httpclient/jars/commons-httpclient-3.1.jar"/>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/commons-logging/commons-logging/srcs/commons-logging-1.1.3-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/commons-logging/commons-logging/jars/commons-logging-1.1.3.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/commons-logging/commons-logging/docs/commons-logging-1.1.3-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/commons-io/commons-io/srcs/commons-io-2.4-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/commons-io/commons-io/jars/commons-io-2.4.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/commons-io/commons-io/docs/commons-io-2.4-javadoc.jar!/"/>
@@ -122,9 +132,85 @@
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/commons-collections/commons-collections/docs/commons-collections-3.2.2-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.servlet/servlet-api/srcs/servlet-api-2.5-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.servlet/servlet-api/jars/servlet-api-2.5.jar"/>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty/srcs/jetty-6.1.26-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty/jars/jetty-6.1.26.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty/docs/jetty-6.1.26-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty-util/srcs/jetty-util-6.1.26-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty-util/jars/jetty-util-6.1.26.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty-util/docs/jetty-util-6.1.26-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-core/srcs/jersey-core-1.9-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-core/bundles/jersey-core-1.9.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-core/docs/jersey-core-1.9-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-json/srcs/jersey-json-1.9-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-json/bundles/jersey-json-1.9.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-json/docs/jersey-json-1.9-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.codehaus.jettison/jettison/srcs/jettison-1.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.codehaus.jettison/jettison/bundles/jettison-1.1.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.codehaus.jettison/jettison/docs/jettison-1.1-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.sun.xml.bind/jaxb-impl/srcs/jaxb-impl-2.2.3-1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.sun.xml.bind/jaxb-impl/jars/jaxb-impl-2.2.3-1.jar"/>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.xml.bind/jaxb-api/srcs/jaxb-api-2.2.2-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.xml.bind/jaxb-api/jars/jaxb-api-2.2.2.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/javax.xml.bind/jaxb-api/docs/jaxb-api-2.2.2-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.xml.stream/stax-api/srcs/stax-api-1.0-2-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.xml.stream/stax-api/jars/stax-api-1.0-2.jar"/>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-server/srcs/jersey-server-1.9-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-server/bundles/jersey-server-1.9.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.sun.jersey/jersey-server/docs/jersey-server-1.9-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/asm/asm/srcs/asm-3.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/asm/asm/jars/asm-3.1.jar"/>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/log4j/log4j/srcs/log4j-1.2.17-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/log4j/log4j/bundles/log4j-1.2.17.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/log4j/log4j/docs/log4j-1.2.17-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/net.java.dev.jets3t/jets3t/srcs/jets3t-0.9.3-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/net.java.dev.jets3t/jets3t/jars/jets3t-0.9.3.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/net.java.dev.jets3t/jets3t/docs/jets3t-0.9.3-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpcore/srcs/httpcore-4.3.3-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpcore/jars/httpcore-4.3.3.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpcore/docs/httpcore-4.3.3-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpclient/srcs/httpclient-4.3.6-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpclient/jars/httpclient-4.3.6.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpclient/docs/httpclient-4.3.6-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.activation/activation/srcs/activation-1.1.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.activation/activation/jars/activation-1.1.1.jar"/>
+  <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/mx4j/mx4j/jars/mx4j-3.0.2.jar"/>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.mail/mail/srcs/mail-1.4.7-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.mail/mail/jars/mail-1.4.7.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/javax.mail/mail/docs/mail-1.4.7-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.bouncycastle/bcprov-jdk15on/srcs/bcprov-jdk15on-1.51-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.bouncycastle/bcprov-jdk15on/jars/bcprov-jdk15on-1.51.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.bouncycastle/bcprov-jdk15on/docs/bcprov-jdk15on-1.51-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.jamesmurty.utils/java-xmlbuilder/srcs/java-xmlbuilder-1.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.jamesmurty.utils/java-xmlbuilder/jars/java-xmlbuilder-1.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.jamesmurty.utils/java-xmlbuilder/docs/java-xmlbuilder-1.0-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/net.iharder/base64/srcs/base64-2.3.8-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/net.iharder/base64/jars/base64-2.3.8.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/net.iharder/base64/docs/base64-2.3.8-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/commons-lang/commons-lang/srcs/commons-lang-2.6-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/commons-lang/commons-lang/jars/commons-lang-2.6.jar">
@@ -196,6 +282,7 @@
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/io.netty/netty/docs/netty-3.9.9.Final-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.jcraft/jsch/srcs/jsch-0.1.42-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.jcraft/jsch/jars/jsch-0.1.42.jar"/>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.curator/curator-recipes/srcs/curator-recipes-2.6.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.curator/curator-recipes/bundles/curator-recipes-2.6.0.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.curator/curator-recipes/docs/curator-recipes-2.6.0-javadoc.jar!/"/>
@@ -211,9 +298,16 @@
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.hadoop/hadoop-hdfs/docs/hadoop-hdfs-2.6.5-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty-util/srcs/jetty-util-6.1.26-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty-util/jars/jetty-util-6.1.26.jar">
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/commons-daemon/commons-daemon/srcs/commons-daemon-1.0.13-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/commons-daemon/commons-daemon/jars/commons-daemon-1.0.13.jar">
     <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.mortbay.jetty/jetty-util/docs/jetty-util-6.1.26-javadoc.jar!/"/>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/commons-daemon/commons-daemon/docs/commons-daemon-1.0.13-javadoc.jar!/"/>
+    </attributes>
+  </classpathentry>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.servlet.jsp/jsp-api/srcs/jsp-api-2.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.servlet.jsp/jsp-api/jars/jsp-api-2.1.jar"/>
+  <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/tomcat/jasper-runtime/jars/jasper-runtime-5.5.23.jar"/>
+  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/commons-el/commons-el/srcs/commons-el-1.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/commons-el/commons-el/jars/commons-el-1.0.jar">
+    <attributes>
+      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/commons-el/commons-el/docs/commons-el-1.0-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
   <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/xerces/xercesImpl/jars/xercesImpl-2.9.1.jar"/>
@@ -238,12 +332,6 @@
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.hadoop/hadoop-yarn-api/docs/hadoop-yarn-api-2.6.5-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.xml.bind/jaxb-api/srcs/jaxb-api-2.2.2-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.xml.bind/jaxb-api/jars/jaxb-api-2.2.2.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/javax.xml.bind/jaxb-api/docs/jaxb-api-2.2.2-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.xml.stream/stax-api/srcs/stax-api-1.0-2-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.xml.stream/stax-api/jars/stax-api-1.0-2.jar"/>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.codehaus.jackson/jackson-jaxrs/srcs/jackson-jaxrs-1.9.13-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.codehaus.jackson/jackson-jaxrs/jars/jackson-jaxrs-1.9.13.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.codehaus.jackson/jackson-jaxrs/docs/jackson-jaxrs-1.9.13-javadoc.jar!/"/>
@@ -368,43 +456,6 @@
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.spark/spark-unsafe_2.11/srcs/spark-unsafe_2.11-2.2.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-unsafe_2.11/jars/spark-unsafe_2.11-2.2.0.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.spark/spark-unsafe_2.11/docs/spark-unsafe_2.11-2.2.0-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/net.java.dev.jets3t/jets3t/srcs/jets3t-0.9.3-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/net.java.dev.jets3t/jets3t/jars/jets3t-0.9.3.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/net.java.dev.jets3t/jets3t/docs/jets3t-0.9.3-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpcore/srcs/httpcore-4.3.3-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpcore/jars/httpcore-4.3.3.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpcore/docs/httpcore-4.3.3-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpclient/srcs/httpclient-4.3.6-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpclient/jars/httpclient-4.3.6.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.httpcomponents/httpclient/docs/httpclient-4.3.6-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.activation/activation/srcs/activation-1.1.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.activation/activation/jars/activation-1.1.1.jar"/>
-  <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/mx4j/mx4j/jars/mx4j-3.0.2.jar"/>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.mail/mail/srcs/mail-1.4.7-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.mail/mail/jars/mail-1.4.7.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/javax.mail/mail/docs/mail-1.4.7-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.bouncycastle/bcprov-jdk15on/srcs/bcprov-jdk15on-1.51-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.bouncycastle/bcprov-jdk15on/jars/bcprov-jdk15on-1.51.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.bouncycastle/bcprov-jdk15on/docs/bcprov-jdk15on-1.51-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/com.jamesmurty.utils/java-xmlbuilder/srcs/java-xmlbuilder-1.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/com.jamesmurty.utils/java-xmlbuilder/jars/java-xmlbuilder-1.0.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/com.jamesmurty.utils/java-xmlbuilder/docs/java-xmlbuilder-1.0-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/net.iharder/base64/srcs/base64-2.3.8-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/net.iharder/base64/jars/base64-2.3.8.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/net.iharder/base64/docs/base64-2.3.8-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/javax.servlet/javax.servlet-api/srcs/javax.servlet-api-3.1.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/javax.servlet/javax.servlet-api/jars/javax.servlet-api-3.1.0.jar">
@@ -600,11 +651,7 @@
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/net.sf.py4j/py4j/docs/py4j-0.10.4-javadoc.jar!/"/>
     </attributes>
   </classpathentry>
-  <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.codehaus.jettison/jettison/srcs/jettison-1.1-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.codehaus.jettison/jettison/bundles/jettison-1.1.jar">
-    <attributes>
-      <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.codehaus.jettison/jettison/docs/jettison-1.1-javadoc.jar!/"/>
-    </attributes>
-  </classpathentry>
+  <classpathentry kind="lib" path="/home/cloudera/.ivy2/cache/tomcat/jasper-compiler/jars/jasper-compiler-5.5.23.jar"/>
   <classpathentry sourcepath="/home/cloudera/.ivy2/cache/org.apache.spark/spark-streaming_2.11/srcs/spark-streaming_2.11-2.2.0-sources.jar" kind="lib" path="/home/cloudera/.ivy2/cache/org.apache.spark/spark-streaming_2.11/jars/spark-streaming_2.11-2.2.0.jar">
     <attributes>
       <attribute name="javadoc_location" value="jar:file:/home/cloudera/.ivy2/cache/org.apache.spark/spark-streaming_2.11/docs/spark-streaming_2.11-2.2.0-javadoc.jar!/"/>
